FC-27 implement liquibase and adds initial data migration